--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
+} */
 
 /* a {
   font-weight: 500;
@@ -78,3 +78,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */ 
+.marginB10 {margin-bottom: 10px;}
+.marginR5 {margin-right: 5px;}
+.label-medium {
+	padding: 9px 10px;
+    font-size: 13px;
+}
